--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 /node_modules
 /.pnp
 .pnp.js
+/src/Test.js
 
 # testing
 /coverage
+
 
 # production
 /build
@@ -18,6 +20,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
